Version 0.4
-----------
* Dump video to file

Version 0.3
-----------
* Event-based interface
* Joystick control

Version 0.2
-----------
* Device renamed to Control
* Sender renamed to Driver
* Fetch demo navigation data

Version 0.1
-----------
* Piloting commands work