@@ -1,4 +1,4 @@
-use Test::More tests => 53;
+use Test::More tests => 59;
 use v5.14;
 use UAV::Pilot::Driver::ARDrone::Mock;
 use UAV::Pilot::Control::ARDrone;
@@ -13,6 +13,7 @@ my $dev = UAV::Pilot::Control::ARDrone->new({
 });
 isa_ok( $dev => 'UAV::Pilot::Control::ARDrone' );
 does_ok( $dev => 'UAV::Pilot::Control' );
+does_ok( $dev => 'UAV::Pilot::SDL::JoystickConverter' );
 
 $ardrone->saved_commands; # Flush saved commands from connect() call
 
@@ -345,3 +346,10 @@ foreach my $test (@TESTS) {
         $test_name,
     );
 }
+
+cmp_ok( $dev->convert_sdl_input( 0 ),      '==', 0.0,  "Convert SDL input 0" );
+cmp_ok( $dev->convert_sdl_input( 32768 ),  '==', 1.0,  "Convert SDL input 2**15" );
+cmp_ok( $dev->convert_sdl_input( -32767 ), '==', -0.999969482421875,
+    "Convert SDL input -(2**15 + 1)" );
+cmp_ok( $dev->convert_sdl_input( 16384 ),  '==', 0.5,  "Convert SDL input 16384" );
+cmp_ok( $dev->convert_sdl_input( -32768 ), '==', -1.0, "Convert overflow input" );
